<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewmodel"
      type="pl.edu.pk.mobile.tourtool.fragment.login.LoginViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.login.LoginFragment">


    <EditText
      android:id="@+id/login_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="16dp"
      android:hint="@string/login_e_mail"
      android:importantForAutofill="no"
      android:inputType="textEmailAddress"
      android:text="@={viewmodel.email}"
      app:layout_constraintBottom_toTopOf="@+id/login_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent" />

    <EditText
      android:id="@+id/login_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_weight=".70"
      android:hint="@string/password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:text="@={viewmodel.password}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.325" />

    <Button
      android:id="@+id/login_login_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/log_in"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
      android:id="@+id/login_signin_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sign_in"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />

    <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:elevation="3dp"
      android:animatedVisibility="@{viewmodel.dataLoading}"
      android:visibility="gone"
      tools:visibility="visible"
      app:layout_constraintBottom_toTopOf="@+id/login_login_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_password" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
