<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewmodel"
      type="pl.edu.pk.mobile.tourtool.fragment.signup.SignUpViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.signup.SignUpFragment">
    <EditText
      android:id="@+id/name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/firstname"
      tools:ignore="MissingConstraints"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="16dp"
      android:importantForAutofill="no"
      app:layout_constraintBottom_toTopOf="@+id/surname"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:inputType="textPersonName" />
    <EditText
      android:id="@+id/surname"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/lastname"
      tools:ignore="MissingConstraints"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="16dp"
      android:importantForAutofill="no"
      app:layout_constraintBottom_toTopOf="@+id/signup_email"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:inputType="textPersonName" />

    <EditText
      android:id="@+id/signup_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="16dp"
      android:hint="@string/login_e_mail"
      android:importantForAutofill="no"
      android:inputType="textEmailAddress"
      android:text="@={viewmodel.email}"
      app:layout_constraintBottom_toTopOf="@+id/password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

    <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_weight=".70"
      android:hint="@string/password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:text="@={viewmodel.password}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.6" />

    <Button
      android:id="@+id/signup_signup_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/signup"
      tools:ignore="MissingConstraints"
      android:onClick="@{() -> viewmodel.signupUser()}"
      app:layout_constraintHorizontal_bias="0.498"
      android:layout_marginTop="220dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
      android:id="@+id/signup_login_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/log_in"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />


  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
